--- a/src/aliengo_wild_visual_navigation/config/wild_visual_navigation/aliengo.yaml
+++ b/src/aliengo_wild_visual_navigation/config/wild_visual_navigation/aliengo.yaml
@@ -5,7 +5,7 @@ desired_twist_topic: "/wild_visual_navigation_node/reference_twist"
 # Relevant frames
 fixed_frame: odom
 base_frame: base
-footprint_frame: base
+footprint_frame: base_footprint
 
 # Robot size used to project the footprint
 robot_length: 0.5
