1. Adding new worlds from ClearPath robotics. 2. TODO: inspection world has issue with friction. Need to be tested.

--- a/src/aliengo_wild_visual_navigation/config/wild_visual_navigation/aliengo.yaml
+++ b/src/aliengo_wild_visual_navigation/config/wild_visual_navigation/aliengo.yaml
@@ -52,5 +52,5 @@ print_image_callback_time: false
 print_supervision_callback_time: false
 log_time: false
 log_confidence: false
-verbose: true
+verbose: false
 extraction_store_folder: "nan"
