--- a/src/aliengo_dynamics_computer/doc/manifest.yaml
+++ b/src/aliengo_dynamics_computer/doc/manifest.yaml
@@ -3,23 +3,25 @@ authors: Brolin
 brief: ''
 bugtracker: ''
 depends:
-- rospy
-- roscpp
-- sensor_msgs
-- message_runtime
-- tf2_ros
 - message_filters
-- message_generation
-- std_msgs
-- geometry_msgs
-- tf2
-- message_filteres
+- pinocchio
 - catkin
+- message_filteres
+- tf2_ros
+- message_generation
+- rospy
+- message_runtime
+- geometry_msgs
+- sensor_msgs
+- tf2
+- roscpp
+- std_msgs
 description: The aliengo_dynamics_computer package
 license: MIT
 maintainers: Brolin <Brolin@todo.todo>
 msgs:
 - ReactionForce
+- FootForces
 package_type: package
 repo_url: ''
 srvs: []
